Removing webkit button styling

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -120,6 +120,7 @@ textarea {
 			16 0,
 		auto;
 	transition: 300ms all ease-in-out;
+	-webkit-appearance: none;
 	&::placeholder {
 		color: #fff;
 	}
