--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -101,6 +101,21 @@ html {
 	box-sizing: border-box;
 }
 
+body {
+	padding-top: 20px;
+}
+
+.logo {
+	position: absolute;
+	top: 40px;
+	left: 40px;
+	z-index: 20;
+	width: 40px;
+	img {
+		width: 100%;
+	}
+}
+
 button,
 input,
 textarea {
