--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -111,6 +111,9 @@ body {
 	left: 40px;
 	z-index: 20;
 	width: 40px;
+	@media screen and (max-width: 680px) {
+		left: 20px;
+	}
 	img {
 		width: 100%;
 	}
